2003-07-17  Peter Spjuth  <peter.spjuth@space.se>

	* tests/frame.test:
	* generic/tkFrame.c (CreateFrame): Make sure all options can be set
	to their default value. [Bug #697652]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): do not free uninit'ed dstring.
	[Bug 755906] (mistachkin)

2003-07-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/send.test: Strengthened constraints to stop accidental
	smashing of Xserver access; some systems (*ahem* mine *ahem*)
	require xhost-style security for all use...  :^/

2003-07-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTextDisp.c (DisplayText): correct use of textPtr data
	with respect to Tcl_Release time. [Bug #767009]

2003-07-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImage.c (TkDeleteAllImages,etc.): Stopped the deleting
	of hash entries from a table that has just been deleted by this
	function when some images are Tcl_Preserve()d...  [Bug 749353]

2003-07-03  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXColor.c (GetControlPartColor): Use
	the ThemeBrushes to get the control text color for
	buttons.  
	
2003-07-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/tkUnixEvent.c (TkpCloseDisplay): Don't
	test for XCloseIM bug when the XFree86 version
	is newer than 4.0 since the layout of the
	XIM structure has changed. The check is not
	needed for newer XFree86 releases since
	the bug we are checking for was fixed in
	the 4.2.99.2 release. [Bug 755530]

2003-06-26  Vince Darley <vincentdarley@users.sourceforge.net>

	* library/menu.tcl: workaround problem on some Windows systems
        by trying to avoid posting a menu offscreen.

2003-06-09  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: fix for [Bug#751553] "Xft: 
	[font configure] does not update in-use fonts".
	Fixed TkpGetSubFonts() to return information about
	all subfonts, not just the first one.

2003-06-01  Joe English  <jenglish@users.sourceforge.net>
