@@ -6,6 +6,10 @@
 
 2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkPanedWindow.c (ArrangePanes): Ensure that the last pane
+	* tests/panedwindow.test: shrinks instead of being clipped when
+	resized below the reqsize. [Bug 748277] (spjuth)
+
 	* generic/tkWindow.c (Initialize): do not free uninit'ed dstring.
 	[Bug 755906] (mistachkin)
 
